kubernetes/clusters/home/media/fresh-rss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-service
  namespace: media

spec:
  selector:
    app: freshrss

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
