kubernetes/clusters/home/media/fresh-rss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  namespace: media

  annotations:
    external-dns.alpha.kubernetes.io/hostname: freshrss.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - freshrss.alarlab.dev
      secretName: freshrss-tls

  rules:
    - host: freshrss.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshrss-service
                port:
                  number: 80

    - host: freshrss.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshrss-service
                port:
                  number: 80
